--- a/src/test/resources/configurations/configuration.properties
+++ b/src/test/resources/configurations/configuration.properties
@@ -1,4 +1,4 @@
-browser=edge
+browser=chrome
 Googleurl=https://www.google.com/
 GoogleMapsUrl=https://www.google.ca/maps
 tsctiurl=https://www.tscti.com 
